update code and added ability send email